--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1229,6 +1229,7 @@ div.region.region-content > ol {
 #gs_cb50 {
   color: $dark-gray;
   padding: .5em;
+  margin-right: -.75em;
 }
 
 .gsst_a {
